# checktica-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
examples/: hello_world.py  product_reviews.py  student_essay_scanner.py
src/checktica/: __init__.py  api.py  data_models.py  exceptions.py
tests/: __init__.py  conftest.py  test_detection.py
